--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,14 +1,10 @@
 {
   "appName": {
-    "message": "Ext Starter",
-    "description": "The name of the extension."
+    "message": "Dictionary Linker",
+    "description": "An extension allow custom your own dictionary"
   },
   "appDescription": {
-    "message": "Boilerplate for building cross browser extensions",
-    "description": "The description of the extension."
-  },
-  "btnTooltip": {
-    "message": "Ext Starter",
-    "description": "Tooltip for the button."
+    "message": "Dictionary Linker",
+    "description": "An extension allow custom your own dictionary"
   }
 }
